--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,30 @@
-.page {
-    background: #FFFFFF;
+/**
+  |============================
+  | Common styke
+  |============================
+*/
+
+body {
+  font-family: Roboto, Raleway, sans-serif;
+  background: #FFFFFF;
     }
 
 a {
     text-decoration: none;
+    color: currentColor;
+}
+
+button {
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.section {
+
+}
+
+.list {
+  list-style: none;
 }
 /**
   |============================
@@ -11,53 +32,68 @@ a {
   |============================
 */ 
 .header {
-    background: #FFFFFF;
+
 }
 
 .header-nav {
 
 }
 
-.header-logo {}
+.header-logo {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4D5AE5; 
+}
 
-.header-studio {}
+.header-studio {
+  color: #2E2F42;
+}
 
 .header-list {}
 
 .header-item {}
 
-.header-link:hover {
+.header-link:hover,
+.header-link:focus {
     color: #404BBF;
 }
 
 .header-link {
-    font-family: 'Roboto';
-    font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
     }
 
-.header-address {}
+.header-address {
 
-.header-contact {}
+}
+.header-list {
 
-.contact-link:hover {
-    color: #404BBF;
 }
 
-.contact-link {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.02em;
-    color: #434455;
-    
+.header-link {
+
 }
+
+.header-contact:hover,
+.header-contact:focus {
+  color: #404BBF;
+}
+
+.header-contact {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+
 
 /**
   |============================
@@ -65,11 +101,33 @@ a {
   |============================
 */
 
-.hero {}
+.hero {
+  background: #2E2F42;
+}
 
-.hero-title {}
+.hero-title {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07px;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+}
 
-.hero-btn {}
+.hero-btn:hover,
+.hero-btn:focus {
+  background-color:#404BBF;
+}
+
+.hero-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4D5AE5;
+  color: #FFFFFF;
+  
+}
 
 /**
   |============================
@@ -84,9 +142,21 @@ a {
 
 .feature-item {}
 
-.feature-subtitle {}
+.feature-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+}
 
-.feature-lead {}
+.feature-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 
 /**
   |============================
@@ -95,7 +165,15 @@ a {
 */
 .services {}
 
-.services-title {}
+.services-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2E2F42;
+}
 
 .services-list {}
 
@@ -115,15 +193,37 @@ a {
     background: #F4F4FD;
 }
 
-.team-title {}
+.team-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2E2F42;
+}
 
 .team-list {}
 
 .team-item {}
 
-.team-subtitle {}
+.team-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+}
 
-.team-lead {}
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
 
 .team-img {}
 
@@ -137,9 +237,26 @@ a {
 }
 
 .footer-logo {
-
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4D5AE5;
 }
 
-.footer-studio {}
+.footer-studio {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #F4F4FD;
+}
 
-.footer-lead {}
+.footer-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #F4F4FD;
+}
