--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@ button {
   cursor: pointer;
 }
 
+address {
+  font-style: normal;
+}
 .section {
 
 }
@@ -62,21 +65,21 @@ button {
 }
 
 .header-link {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2E2F42;
-    }
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2E2F42;
+}
 
 .header-address {
 
 }
-.header-list {
+.header-contact-list {
 
 }
 
-.header-link {
+.header-contact-link {
 
 }
 
@@ -86,7 +89,6 @@ button {
 }
 
 .header-contact {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -108,7 +110,7 @@ button {
 .hero-title {
   font-weight: 700;
   font-size: 56px;
-  line-height: 1.07px;
+  line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
   color: #FFFFFF;
@@ -151,7 +153,6 @@ button {
 }
 
 .feature-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -217,7 +218,6 @@ button {
 }
 
 .team-text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
