--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ address {
 }
 
 .header-logo {
-  font-family:var(--primary-font);
+  font-family:var(--secondary-font);
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -77,6 +77,7 @@ address {
 }
 
 .header-studio {
+  font-family: var(--secondary-font);
   color: #2E2F42;
 }
 
@@ -259,6 +260,7 @@ address {
 }
 
 .footer-studio {
+  font-family: var(--secondary-font);
   color: #F4F4FD;
 }
 
@@ -278,9 +280,9 @@ address {
   | Filter btn
   |============================
 */
-.filter-list {}
-
-.filter-item {}
+.filter-title {
+  
+}
 
 .filter-btn-all {
   font-weight: 500;
