--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: var(--body-grey-cl);
   background: var(--body-white-bg)
     }
 
