--- a/css/styles.css
+++ b/css/styles.css
@@ -309,7 +309,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #4D5AE5;
-  background-color: #F4F4FD;
+  background: #F4F4FD;
 }
 
 /**
