--- a/css/styles.css
+++ b/css/styles.css
@@ -308,8 +308,9 @@ address {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  color: #4D5AE5;
-  background: #F4F4FD;
+  color: #4d5ae5;
+  background-color: #F4F4FD;
+ 
 }
 
 /**
