--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
   /* Font*/
   --primary-font: Roboto;
-  --secondary-font Raleway, sans-serif;
+  --secondary-font Raleway;
 
   /* Colors*/
   --body-grey-cl: #434455 ;
@@ -69,7 +69,7 @@ address {
 }
 
 .header-logo {
-  font-family:"Raleway", sans-serif;
+  font-family:var(--secondary-font), sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -79,7 +79,7 @@ address {
 }
 
 .header-studio {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--secondary-font), sans-serif;
   color: #2E2F42;
 }
 
@@ -257,7 +257,7 @@ address {
 }
 
 .footer-logo {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--secondary-font), sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -267,7 +267,7 @@ address {
 }
 
 .footer-studio {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--secondary-font), sans-serif;
   color: #F4F4FD;
 }
 
