--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
   /* Font*/
   --primary-font: Roboto;
-  --secondary-font Raleway;
+  --secondary-font: Raleway;
 
   /* Colors*/
   --body-grey-cl: #434455 ;
@@ -23,7 +23,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--body-grey-cl);
-  background: var(--body-white-bg)
+  background: var(--body-white-bg);
     }
 
 /* Reset*/
